--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
+body {
+  border-style: groove;
+  font-family: sans-serif;
+  text-align: center;
+}
+
 h1 {
   background-color: aqua;
 }
 
 .completed {
   text-decoration: line-through solid rgb(0 , 0 , 0);
+}
+
+button {
+  background-color:cornflowerblue;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  font-family: sans-serif;
+}
+
+input {
+  width: 30%;
+  padding: 15px 32px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 20px;
+}
+
+.list-tasks {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
